# datakit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md
_examples/: example_schema.json
_research/parallel/: benchmark-table-charts.R  parallel-routines-datakit.md
_research/parallel/benchmark-data/: benchmark-table.csv
benches/: experimental_parallel.rs
examples/: example_table.rs  parallel-validation.rs  parse_date.rs
examples/experimental/parallel-validation/: Cargo.toml
examples/experimental/parallel-validation/src/: main.rs
research/parallel/: benchmark-table-charts.R  parallel-routines-datakit.md
research/parallel/benchmark-data/: benchmark-table.csv
src/: errors.rs  lib.rs  table.rs  value.rs
src/value/: coercion.rs  constraint.rs  constraints.rs  conversion.rs  definitions.rs  parsing.rs  primitives.rs  traits.rs
src/value/primitives/: basic.rs  composite.rs  datetime.rs
tests/: ext_api_test.rs  table_test.rs  value_test.rs
