[package]
name = "datakit"
version = "0.2.0"
authors = ["Jevgeni Tarasov <jev@jst.lu>"]
edition = "2018"

[dependencies]
serde = { version = "^1", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }
rayon = "^1"
csv = "^1"
console = "^0.11"
scanner-rust = "^2"
serde_json = "^1"
thiserror = "^1"