[package]
name = "datakit"
version = "0.2.1"
authors = ["Jevgeni Tarasov <jev@jst.lu>"]
edition = "2018"

[features]
experimental = ["rayon"]
chrono_dates = ["chrono"]

[dependencies]
serde = { version = "^1", features = ["derive"] }
csv = "^1"
console = "^0.11"
serde_json = "^1"
thiserror = "^1"
iso8601 = "^0.4"
rand = "^0.7"

chrono = { version = "^0.4", features = ["serde"], optional = true }
rayon = { version = "^1", optional = true }